add max complexity

--- a/tox.ini
+++ b/tox.ini
@@ -4,27 +4,26 @@ envlist = py26,py27,py33,py34
 [testenv]
 deps =
     -rrequirements.txt
-    flake8
     pytest
     mock
 commands =
     py.test {posargs:tests}
-    flake8 .
 
 [testenv:py26]
 deps =
     -rrequirements.txt
-    flake8
     pytest
     mock < 1.1.0
 
-[testenv:install-hooks]
+[testenv:pre-commit]
 deps = 
     pre-commit
 commands =
     pre-commit install
+    pre-commit run --all-files
 
 [flake8]
 ignore =
 exclude = .git/*,.tox/*,debian/*
-max_line_length = 85
+max-line-length = 85
+max-complexity = 5
